--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <body>
     <!-- Place your content here -->
     <h1>GitHub操作 課題1</h1>
-    <p>メインブランチ用HTMLファイル</p>
+    <button id="greetingBtn">Hello!</button>
+    <div id="message"></div>
 
     <!-- SCRIPTS -->
+    <script src="index.js"></script>
   </body>
 </html>
